--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -151,6 +151,15 @@
                             <div class="bg"></div>
                         </div>
                     </div>
+                    <div #wrapper7 class="wrapper">
+                        <div #ticket7 class="ticket d7">
+                            <img class="imagen" src="../../assets/img/css.png" alt="">
+                            <div class="bg1"></div>
+                            <div class="bg2"></div>
+                            <h1>Type Script</h1>
+                            <div class="bg"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
