--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -1,6 +1,6 @@
 .body {
     width: calc(100% - 25rem);
-    height: 100%;
+    min-height: 96vh;
     margin-left: 23rem;
     margin-top: 1.5rem;
     margin-bottom: 1rem;
