--- a/src/app/perfil/perfil.component.css
+++ b/src/app/perfil/perfil.component.css
@@ -12,19 +12,19 @@
     left: 10px;
     display: flex;
     width: 20rem;
-    height: auto;
+    height: 96vh;
     border-radius: 15px;
     flex-direction: column;
     align-items: center;
     box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
-    
+
 
 }
 
 
 .imagen {
     background: url(../../assets/img/fondo.jpg );
-        background-size: cover;
+    background-size: cover;
 
     margin: 5px;
     z-index: 2;
