se creo la carta falta mas cosas por agregar

--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -665,6 +665,7 @@ h1 {
 
 
 
+
 .referencias .text-animate2 {
     width: 14rem;
     position: relative;
@@ -731,6 +732,83 @@ h1 {
         opacity: 0;
     }
 }
+
+
+:root {
+    --first-color: hsl(29, 80%, 58%);
+    --first-color-light: hsl(29, 80%, 70%);
+    --black-color: hsl(29, 16%, 10%);
+    --text-color: hsl(29, 8%, 65%);
+    --body-color: hsl(29, 100%, 99%);
+    --body-font: "Poppins", sans-serif;
+    --h3-font-size: 1.125rem;
+    --smaller-font-size: .75rem;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.container3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.card1 {
+    position: relative;
+    display: flex;
+    width: 300px;
+    height: 170px;
+    background: rgba(45, 45, 45, 1);
+    border-radius: 1.5rem;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.card1::before {
+    content: '';
+    position: absolute;
+    top: var(--y);
+    left: var(--x);
+    transform: translate(-50%, -50%);
+    background: radial-gradient(var(--clr), transparent, transparent);
+    width: 300px;
+    height: 300px;
+    opacity: 0;
+    transition: opacity 0.5s, top 3s, left 3s; /* Ajusta la transición de top y left a 3s */
+}
+
+.card1:hover::before {
+    opacity: 1;
+    transition: opacity 0.1s;
+}
+
+.card1::after {
+    content: '';
+    position: absolute;
+    inset: 2px;
+    border-radius: 20px;
+    background: rgba(45, 45, 45, 0.75);
+    transition: 1s ease;
+}
+
+  
 
 .footer {
     width: 100%;
