--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -174,26 +174,28 @@
             </div>
             <div class="container3">
                 <!-- Tarjeta 1 -->
-                <div class="card1" #card1 style="--clr: #0f0;">
-                    <div class="card__border">
-                        <img src="/leo.png" alt="card image" class="card__img">
+                <div class="cards1" >
+                    <div class="card1_border">
+                        <img src="../../assets/img/leo2.jpg" alt="card image" class="card1_img">
                     </div>
-                    <h3 class="card__name">Leonardo Poveda</h3>
-                    <span class="card__profession">UI/UX Designer</span>
-                    <div class="card__social" id="card-social1">
-                        <div class="card__social-control">
-                            <div class="card__social-toggle" id="card-toggle1">
+                    <div class="card1" #card1 style="--clr: #0f0;"></div>
+
+                    <h3 class="card1_name">Leonardo Poveda</h3>
+                    <span class="card1_profession">UI/UX Designer</span>
+                    <div class="card1_social" id="card1-social1">
+                        <div class="card1_social-control">
+                            <div class="card1_social-toggle" id="card1-toggle1">
                                 <i class="ri-add-line"></i>
                             </div>
-                            <span class="card__social-text">My social networks</span>
-                            <ul class="card__social-list">
-                                <a href="https://www.facebook.com/" target="blank" class="card_social-link">
+                            <span class="card1_social-text">My social networks</span>
+                            <ul class="card1_social-list">
+                                <a href="https://www.facebook.com/" target="blank" class="card1_social-link">
                                     <i class="ri-facebook-line"></i>
                                 </a>
-                                <a href="https://www.instagram.com/" target="blank" class="card_social-link">
+                                <a href="https://www.instagram.com/" target="blank" class="card1_social-link">
                                     <i class="ri-instagram-line"></i>
                                 </a>
-                                <a href="https://twitter.com/" target="blank" class="card_social-link">
+                                <a href="https://twitter.com/" target="blank" class="card1_social-link">
                                     <i class="ri-twitter-line"></i>
                                 </a>
                             </ul>
