--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    font-family: "Ubuntu", sans-serif;
     list-style: none;
 }
 
@@ -13,7 +13,6 @@
 body {
     min-height: 100vh;
     /* Asegura que el body ocupe al menos toda la altura de la ventana */
-    font-family: "Poppins", sans-serif;
     background: url(./assets/img/fondo.jpg);
     background-size: cover;
 }
