--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -427,6 +427,9 @@ h1 {
     font-size: 19px;
     font-weight: 900;
     z-index: 10;
+    -webkit-user-select: none;
+    user-select: none;
+    pointer-events: none;
 }
 
 .wrapper {
@@ -751,9 +754,9 @@ img {
 
 .container3 {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 20px;
+    gap: 80px;
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -761,8 +764,8 @@ img {
 .cards1 {
     position: relative;
     display: flex;
-    width: 280px;
-    height: 170px;
+    width: 100%;
+    height: 200px;
     border-radius: 1.5rem;
     text-align: center;
     justify-content: center;
@@ -772,8 +775,8 @@ img {
 
 .card1 {
     position: absolute;
-    width: 280px;
-    height: 170px;
+    width: 100%;
+    height: 200px;
     border-radius: 1.5rem;
     overflow: hidden;
 }
@@ -785,8 +788,8 @@ img {
     left: var(--x);
     transform: translate(-50%, -50%);
     background: radial-gradient(var(--clr), transparent, transparent);
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
     opacity: 0;
     transition: opacity 0.5s, top 3s, left 3s;
 }
@@ -806,49 +809,52 @@ img {
 }
 
 .card1_img {
-    transform: translateY(-3px);
-    width: 150px;
-    height: 150px;
-    border-radius: 20px;
+    transform: translate(0px, 0px);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
 
 .card1_border {
     position: absolute;
-    top: -70px;
-    width: 150px;
-    height: 150px;
-    border-radius: 20px;
+    top: 11px;
+    width: 105px;
+    height: 105px;
+    border-radius: 50%;
     display: grid;
+    z-index: 100;
     place-items: center;
     margin: 0 auto 0.75rem;
 }
 
 
 
-.card1_name,
-.card1_profession {
-    color: #fff;
-    font-size: 15px;
-    font-weight: 500;
-    position: absolute;
-    user-select: none;
-    /* Desactiva la selección de texto */
-    pointer-events: none;
-    /* Permite que los eventos del mouse pasen a través del texto */
-}
 
 .card1_name {
-    top: 85px;
+    top: 124px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 600;
+    position: absolute;
+    -webkit-user-select: none;
+    user-select: none;
+    pointer-events: none;
 }
 
 .card1_profession {
-    top: 112px;
+    top: 148px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    position: absolute;
+    -webkit-user-select: none;
+    user-select: none;
+    pointer-events: none;
 }
 
 .card1_social {
-    width: 220px;
     background: hsl(204, 100%, 3%);
-    box-shadow: 0 0 20px 0px #0f0;
+    width: 220px;
     padding: 0.5rem;
     border-radius: 3rem;
     text-align: initial;
@@ -861,6 +867,21 @@ img {
     transform-origin: 18px 17px;
 }
 
+.card1_social.a1 {
+    box-shadow: 0 0 20px 0px #0f0;
+
+}
+
+.card1_social.a2 {
+   
+    box-shadow: 0 0 20px 0px #ff0055;
+
+}
+.card1_social.a3 {
+   
+    box-shadow: 0 0 20px 0px #1e00ff;
+
+}
 .card1_social-control {
     position: relative;
     transform-origin: 16px 16px;
@@ -874,7 +895,6 @@ img {
 
 .card1_social-toggle {
     display: inline-flex;
-    background-color: #0f0;
     padding: 0.2rem;
     border-radius: 50%;
     color: #fff;
@@ -885,7 +905,18 @@ img {
     position: relative;
     z-index: 10;
 }
-
+.card1_social-toggle.b1 {
+    background-color: #0f0;
+   
+}
+.card1_social-toggle.b2 {
+    background-color: #ff0055;
+   
+}
+.card1_social-toggle.b3{
+    background-color: #1e00ff;
+   
+}
 .card1_social-text {
     display: block;
     color: #fff;
