--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -163,8 +163,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- //////////////////////////////////////////////////////// -->
         <div class="referencias">
             <div class="title">
                 <div class="text-animate2">
@@ -174,17 +172,74 @@
             </div>
             <div class="container3">
                 <!-- Tarjeta 1 -->
-                <div class="cards1" >
+                <div class="cards1">
                     <div class="card1_border">
                         <img src="../../assets/img/leo2.jpg" alt="card image" class="card1_img">
                     </div>
                     <div class="card1" #card1 style="--clr: #0f0;"></div>
-
                     <h3 class="card1_name">Leonardo Poveda</h3>
                     <span class="card1_profession">UI/UX Designer</span>
-                    <div class="card1_social" id="card1-social1">
+                    <div class="card1_social a1" id="card1-social1">
                         <div class="card1_social-control">
-                            <div class="card1_social-toggle" id="card1-toggle1">
+                            <div class="card1_social-toggle b1" id="card1-toggle1">
+                                <i class="ri-add-line"></i>
+                            </div>
+                            <span class="card1_social-text">My social networks</span>
+                            <ul class="card1_social-list">
+                                <a href="https://www.facebook.com/" target="blank" class="card1_social-link">
+                                    <i class="ri-facebook-line"></i>
+                                </a>
+                                <a href="https://www.instagram.com/" target="blank" class="card1_social-link">
+                                    <i class="ri-instagram-line"></i>
+                                </a>
+                                <a href="https://twitter.com/" target="blank" class="card1_social-link">
+                                    <i class="ri-twitter-line"></i>
+                                </a>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Tarjeta 2-->
+                <div class="cards1">
+                    <div class="card1_border">
+                        <img src="../../assets/img/leo2.jpg" alt="card image" class="card1_img">
+                    </div>
+                    <div class="card1" #card1 style="--clr: #ff0055;"></div>
+                    <h3 class="card1_name">Leonardo Poveda</h3>
+                    <span class="card1_profession">UI/UX Designer</span>
+                    <div class="card1_social a2" id="card1-social2">
+                        <div class="card1_social-control">
+                            <div class="card1_social-toggle b2" id="card1-toggle2">
+                                <i class="ri-add-line"></i>
+                            </div>
+                            <span class="card1_social-text">My social networks</span>
+                            <ul class="card1_social-list">
+                                <a href="https://www.facebook.com/" target="blank" class="card1_social-link">
+                                    <i class="ri-facebook-line"></i>
+                                </a>
+                                <a href="https://www.instagram.com/" target="blank" class="card1_social-link">
+                                    <i class="ri-instagram-line"></i>
+                                </a>
+                                <a href="https://twitter.com/" target="blank" class="card1_social-link">
+                                    <i class="ri-twitter-line"></i>
+                                </a>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Tarjeta 3-->
+                <div class="cards1">
+                    <div class="card1_border">
+                        <img src="../../assets/img/leo2.jpg" alt="card image" class="card1_img">
+                    </div>
+                    <div class="card1" #card1 style="--clr: #1e00ff;"></div>
+                    <h3 class="card1_name">Leonardo Poveda</h3>
+                    <span class="card1_profession">UI/UX Designer</span>
+                    <div class="card1_social a3" id="card1-social3">
+                        <div class="card1_social-control">
+                            <div class="card1_social-toggle b3" id="card1-toggle3">
                                 <i class="ri-add-line"></i>
                             </div>
                             <span class="card1_social-text">My social networks</span>
@@ -204,6 +259,7 @@
                 </div>
             </div>
         </div>
+
 
     </section>
     <div class="footer">
