se agrego toastr para las alertas ya que no he terminado algunas ocsas y que no funcioan entonces con eso ya las personsa uqe mirar eso  le aparesca una alerta de warnig de que en proximas actualizaciones se argrega el contenido que falta

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,7 +37,7 @@
           <i class="bx uil-moon change-theme" id="theme-button"></i>
         </div>
 
-        <div class="music" id="nav_music">
+        <div class="music"  (click)="showsuccess()" id="nav_music">
           <i class='bx bx-volume-full change-theme'></i>
         </div>
       </div>
