--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -15,15 +15,16 @@
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p>2019 Finalizado </p>
+                                <p> 2019 / Actualmente 8º</p>
                             </div>
-                            <h4>Bachillerato </h4>
-                            <p>Colegio - Jorge Eliecer Gaitan </p>
+                            <h4>Ingenieria de Sistemas</h4>
+                            <p>UNAD </p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
                         </div>
                     </div>
+                   
                     <div class="box b2">
                         <div class="text">
                             <div class="experiencia__calendar">
@@ -37,20 +38,20 @@
                             </p>
                         </div>
                     </div>
-
                     <div class="box b1">
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p> 2019 / Actualmente 8º</p>
+                                <p>2019 Finalizado </p>
                             </div>
-                            <h4>Ingenieria de Sistemas</h4>
-                            <p>UNAD </p>
+                            <h4>Bachillerato </h4>
+                            <p>Colegio - Jorge Eliecer Gaitan </p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
                         </div>
                     </div>
+                  
 
                 </div>
             </div>
@@ -187,14 +188,14 @@
                         <img src="../../assets/img/leo2.jpg" alt="card image" class="card1_img">
                     </div>
                     <div class="card1" #card1 style="--clr: #0f0;"></div>
-                    <h3 class="card1_name">Leonardo Poveda</h3>
-                    <span class="card1_profession">UI/UX Designer</span>
+                    <h3 class="card1_name">Harbey Paez</h3>
+                    <span class="card1_profession">Vacio</span>
                     <div class="card1_social a1" id="card1-social1">
                         <div class="card1_social-control">
                             <div class="card1_social-toggle b1" id="card1-toggle1">
                                 <i class="ri-add-line"></i>
                             </div>
-                            <span class="card1_social-text">My social networks</span>
+                            <span class="card1_social-text">Redes Sociales</span>
                             <ul class="card1_social-list">
                                 <a href="https://www.facebook.com/" target="blank" class="card1_social-link">
                                     <i class="ri-facebook-line"></i>
@@ -216,14 +217,14 @@
                         <img src="../../assets/img/leo2.jpg" alt="card image" class="card1_img">
                     </div>
                     <div class="card1" #card1 style="--clr: #ff0055;"></div>
-                    <h3 class="card1_name">Leonardo Poveda</h3>
-                    <span class="card1_profession">UI/UX Designer</span>
+                    <h3 class="card1_name">Johana Milena Martinez</h3>
+                    <span class="card1_profession">Contadora</span>
                     <div class="card1_social a2" id="card1-social2">
                         <div class="card1_social-control">
                             <div class="card1_social-toggle b2" id="card1-toggle2">
                                 <i class="ri-add-line"></i>
                             </div>
-                            <span class="card1_social-text">My social networks</span>
+                            <span class="card1_social-text">Redes Sociales</span>
                             <ul class="card1_social-list">
                                 <a href="https://www.facebook.com/" target="blank" class="card1_social-link">
                                     <i class="ri-facebook-line"></i>
@@ -245,14 +246,14 @@
                         <img src="../../assets/img/leo2.jpg" alt="card image" class="card1_img">
                     </div>
                     <div class="card1" #card1 style="--clr: #1e00ff;"></div>
-                    <h3 class="card1_name">Leonardo Poveda</h3>
-                    <span class="card1_profession">UI/UX Designer</span>
+                    <h3 class="card1_name">Julieth Cuervo</h3>
+                    <span class="card1_profession">Recursos Humanos</span>
                     <div class="card1_social a3" id="card1-social3">
                         <div class="card1_social-control">
                             <div class="card1_social-toggle b3" id="card1-toggle3">
                                 <i class="ri-add-line"></i>
                             </div>
-                            <span class="card1_social-text">My social networks</span>
+                            <span class="card1_social-text">Redes Sociales</span>
                             <ul class="card1_social-list">
                                 <a href="https://www.facebook.com/" target="blank" class="card1_social-link">
                                     <i class="ri-facebook-line"></i>
