--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         
         <div class="text-animate2">
-            <h1>Leonardo Poveda</h1>
+            <h1>LP Stiven Martinez</h1>
         </div>
         <!-- <span>FullStack</span> -->
 
