--- a/src/app/componets/perfil/perfil.component.css
+++ b/src/app/componets/perfil/perfil.component.css
@@ -23,7 +23,7 @@
 
 
 .imagen {
-    background: url(../../assets/img/fondo.jpg );
+    background: url(../../../assets/img/fondo.jpg );
     background-size: cover;
 
     margin: 5px;
